<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />

    </group>
    <!--    <group android:checkableBehavior="single">-->
    <!--        <item-->
    <!--            android:id="@+id/nav_camera"-->
    <!--            android:icon="@drawable/ic_menu_camera"-->
    <!--            android:title="@string/menu_camera" />-->

    <!--    </group>-->

    <!--    <group-->
    <!--        android:id="@+id/group1"-->
    <!--        android:checkableBehavior="single">-->
    <!--        <item-->
    <!--            android:id="@+id/nav_manage"-->
    <!--            android:icon="@drawable/ic_menu_manage"-->
    <!--            android:title="@string/menu_tools" />-->
    <!--    </group>-->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_menu_history"
            android:title="@string/menu_history" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inpres"
            android:icon="@drawable/ic_menu_inpres"
            android:title="@string/menu_inpres" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/exit" />
    </group>

</menu>
